# my_blog

./: .gitignore  README.md  index.html  pyproject.toml
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/Coggle 30 Days of ML/22年1-2月/: README.md
docs/学习/:  学习笔记-物体检测算法R-CNN与YOLO.md  BERT学习.md  LangGPT： 面向大语言模型的自然语言编程框架.md  MySQL学习.md  Transformer学习.md  hyperopt超参数优化.md  损失函数.md  时间序列学习.md  模型调参优化.md  激活函数学习.md  软实力.md  项目介绍.md  风控相关学习.md
docs/学习/LeetCode/: README.md  二叉树.md  动态规划.md  滑动窗口.md  背包.md
docs/学习/异步编程基础/: README.md  Task1学习笔记：Agent异步编程基础.md
docs/学习/异步编程基础/code/: 1.异步网络请求.py  2.Web应用和API服务.py  3.比较同步和异步编程的差异.py  4.时间对比.py  5. 记忆：异步编程的基础知识.py  6.Task的使用.py  pyproject.toml
docs/数据库/: MYSQL笔记.md  安装mysql主从.md
docs/第32期推荐系统/: Task2数据库的基本使用.md  Task3 离线物料系统的构建.md  Task4 推荐系统前后端交互.md  Task5.md
docs/组队学习/2024-01大模型理论基础/: TASK2.md  TASK3.md  TASK4.md
docs/组队学习/2024-02大模型实战/: TASK1.md  TASK2.md  TASK3.md  TASK4.md  TASK5.md
docs/组队学习/2024-03动手学RAG/: TASK1.md  TASK10.ipynb  TASK2.ipynb  TASK3.ipynb  TASK4.ipynb  TASK5.ipynb  TASK6.ipynb  TASK7.ipynb  TASK8.ipynb  TASK9.ipynb
docs/组队学习/2024-03多智能体实战/: README.md  TASK1.md  TASK2.md
docs/组队学习/2024-04-LLM之RAG实战/: Task29探索RAG-PDF解析.md  Task31探索RAG重排序.md  Task34使用LangChain的三个函数来优化RAG.md
docs/组队学习/2024-04LLM之RAG实战(DOING)/: Task01RAG为什么需要重排序.md  Task0大模型「训练」与「微调」概念详解.md  Task11面向生产的RAG应用程序的12种调整策略指南.md  Task22LlamaIndex高级检索1-构建完整基本RAG框架.md  (+9 more)
docs/组队学习/2024-06向量数据库Milvus/: demo.ipynb  demo.py  docker-compose.yml  milvus基本使用.md  pyproject.toml
docs/组队学习/2024-06向量数据库Milvus/code/: Milvus_Demo.ipynb  milvus基本使用.ipynb  sentencetransformers_milvus.ipynb
docs/组队学习/2024-07大模型框架llama_index/: .env  QwenOffline.py  bm25.ipynb  bm25_retriever.ipynb  pyproject.toml  qwen_assistent.py
docs/组队学习/2024-07大模型框架llama_index/QWenCustomLLMOnline/: QwenCustomLLMOnline.py
docs/组队学习/2024-07大模型框架llama_index/QwenCustomLLMOffline/: QwenCustomLLM.py
docs/面试/: ARIMA.md  BERT面试题.md  HIVE面试题.md  MySQL.md  MySQL面试题.md  RNN面试题.md  Spark面试题.md  TabNet.md  Transformer.md  Transformer面试题.md  pyspark学习.md  时间序列面试题.md  模型调参优化.md  激活函数.md  激活函数面试题.md  第六章_循环神经网络(RNN).md  软实力.md  项目介绍.md  风控相关.md  风控相关面试题.md
第32期推荐系统/: Datawhale第32期组队学习-新闻推荐系统项目搭建（Windows10）V0.2-2021-12-13.docx  README.md  Task0推荐系统环境搭建.md
面试/: 第六章_循环神经网络(RNN).md
(+89 files in other folders)
