[tool.poetry]
name = "2024-07大模型框架llama-index"
version = "0.1.0"
description = ""
authors = ["Heitao5200 <810217789@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
llama-index = "^0.10.28"
torch = "^2.2.2"
transformers = "^4.39.3"
accelerate = "^0.29.2"
llama-index-embeddings-huggingface = "^0.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun-source"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"